--- a/index.html
+++ b/index.html
@@ -34,10 +34,120 @@
 
 
     <div id="optionsSection" class="options">
-        <button type="button" onclick="logAbsence()">Abwesenheit protokollieren</button>
-        <button type="button" onclick="deleteAbsence()"> Abwesenheit Löschen</button>
-        <button type="button" onclick="viewAbsenceHistory()">Abwesenheitsverlauf ansehen</button>
+        <button id="logAbsenceButton" class="action-button" type="button" onclick="logAbsence()">Abwesenheit protokollieren</button>
+        <button id="deleteAbsenceButton" class="action-button"  type="button" onclick="deleteAbsence()"> Abwesenheit Löschen</button>
+        <button id="viewHistoryButton" class="action-button" type="button" onclick="viewAbsenceHistory()">Abwesenheitsverlauf ansehen</button>
     </div>
+
+<!-- Abwesenheit protokollieren, löschen, ansehen--->
+    <div id="logAbsenceContent" class="action-content">
+        <!-- go back button-->
+        <button id="goBackButton" class="goback" onclick="goBackToOptions()">
+         <svg xmlns="http://www.w3.org/2000/svg" width="39" height="42" viewBox="0 0 39 42" fill="none">
+            <path d="M2 20L38.5 41V1.5L2 20Z" fill="#D9D9D9" stroke="black"/>
+        </svg>
+        </button>
+
+
+        <p class="AbsenceTitle">Absenzen Protokollieren</p>
+        <label for="class">Klasse:</label>
+        <select id="class" name="class" required>
+            <option value="me21a">ME21a</option>
+            <option value="me21b">ME21b</option>
+            <option value="me21c">ME21c</option>
+            <option value="me21d">ME21d</option>
+<!--name von Student-->
+            <label for="student">Name:</label>
+            <input type="text" id="student" name="student" required>
+                <!--Datum-->
+                <label for="date">Datum:</label>
+                <input type="date" id="date" name="date" required>
+
+                <!-- reasoning-->
+                <label for="absenceStatus">Grund für Absenz:</label>
+                <select id="absenceStatus" name="absenceStatus" required>
+                    <option value="Sick Leave">Krank</option>
+                    <option value="Appointment">Termin</option>
+                    <option value="Personal Reason">Persönlicher Grund</option>
+                    <option value="Late">Verspätet</option>
+                    <option value="Family Reason">Familiärer Grund </option>
+                    <option value="School Excursion">Schulausflug</option>
+                    <option value="Business Trip">Geschäftsreise</option>
+                    <option value="Project Week">Projektwoche</option>
+                    <option value="Sport Obligation">Sportverpflichtung</option>
+                    <option value="External Training">Externe Ausbildung</option>
+                </select>
+                <!--kommentar-->
+                <label for="Kommentar">Kommentar:</label>
+                <textarea id="Kommentar" name="Kommentar" rows="4" cols="50"></textarea>
+
+    </div>
+
+    <div id="deleteAbsenceContent" class="action-content">
+        <!-- go back button-->
+        <button id="goBackButton" class="goback" onclick="goBackToOptions()">
+            <svg xmlns="http://www.w3.org/2000/svg" width="39" height="42" viewBox="0 0 39 42" fill="none">
+                <path d="M2 20L38.5 41V1.5L2 20Z" fill="#D9D9D9" stroke="black"/>
+            </svg>
+        </button>
+
+
+
+        <p class="AbsenceTitle">Absenzen Löschen</p>
+        <label for="class">Klasse:</label>
+        <select id="class" name="class" required>
+            <option value="me21a">ME21a</option>
+            <option value="me21b">ME21b</option>
+            <option value="me21c">ME21c</option>
+            <option value="me21d">ME21d</option>
+            <!--name von Student-->
+            <label for="student">Name:</label>
+            <input type="text" id="student" name="student" required>
+                <!--Datum-->
+                <label for="date">Datum:</label>
+                <input type="date" id="date" name="date" required>
+
+                <!-- reasoning-->
+                <label for="absenceStatus">Grund für Absenz:</label>
+                <select id="absenceStatus" name="absenceStatus" required>
+                    <option value="Sick Leave">Krank</option>
+                    <option value="Appointment">Termin</option>
+                    <option value="Personal Reason">Persönlicher Grund</option>
+                    <option value="Late">Verspätet</option>
+                    <option value="Family Reason">Familiärer Grund </option>
+                    <option value="School Excursion">Schulausflug</option>
+                    <option value="Business Trip">Geschäftsreise</option>
+                    <option value="Project Week">Projektwoche</option>
+                    <option value="Sport Obligation">Sportverpflichtung</option>
+                    <option value="External Training">Externe Ausbildung</option>
+                </select>
+                <!--kommentar-->
+                <label for="Kommentar">Kommentar:</label>
+                <textarea id="Kommentar" name="Kommentar" rows="4" cols="50"></textarea>
+    </div>
+
+    <div id="viewHistoryContent" class="action-content">
+
+        <!-- go back button-->
+        <button id="goBackButton" class="goback" onclick="goBackToOptions()">
+            <svg xmlns="http://www.w3.org/2000/svg" width="39" height="42" viewBox="0 0 39 42" fill="none">
+                <path d="M2 20L38.5 41V1.5L2 20Z" fill="#D9D9D9" stroke="black"/>
+            </svg>
+        </button>
+
+        <p class="AbsenceTitle">Absenzen Ansehen</p>
+        <label for="class">Klasse:</label>
+        <select id="class" name="class" required>
+            <option value="me21a">ME21a</option>
+            <option value="me21b">ME21b</option>
+            <option value="me21c">ME21c</option>
+            <option value="me21d">ME21d</option>$
+            <!--Datum-->
+            <<label for="date">Datum:</label>
+            <input type="date" id="date" name="date" required>
+    </div>
+
+
 
 
 </body>
