deleted php text + javascript Added new css elements

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h1> Bildungszentrum
         Zürichsee
 <div class="absenzen">
-        Absenzen
+        Absenzen</div>
     </h1>
-</div>
+
     <!--Login-->
     <div id="loginSection">
         <form id="loginForm">
@@ -27,8 +27,8 @@
     <input type="password" id="password" name="password" required>
 
     <button class="login" type="button" onclick="login()">Login</button>
+            </div>
 
-    </div>
 
     </form>
 
@@ -56,6 +56,7 @@
             <option value="me21b">ME21b</option>
             <option value="me21c">ME21c</option>
             <option value="me21d">ME21d</option>
+        </select>
 <!--name von Student-->
             <label for="student">Name:</label>
             <input type="text" id="student" name="student" required>
@@ -64,7 +65,7 @@
                 <input type="date" id="date" name="date" required>
 
                 <!-- reasoning-->
-                <label for="absenceStatus">Grund für Absenz:</label>
+                <label for="absenceStatus">Grund:</label>
                 <select id="absenceStatus" name="absenceStatus" required>
                     <option value="Sick Leave">Krank</option>
                     <option value="Appointment">Termin</option>
@@ -100,6 +101,7 @@
             <option value="me21b">ME21b</option>
             <option value="me21c">ME21c</option>
             <option value="me21d">ME21d</option>
+        </select>
             <!--name von Student-->
             <label for="student">Name:</label>
             <input type="text" id="student" name="student" required>
@@ -108,7 +110,7 @@
                 <input type="date" id="date" name="date" required>
 
                 <!-- reasoning-->
-                <label for="absenceStatus">Grund für Absenz:</label>
+                <label for="absenceStatus">Grund:</label>
                 <select id="absenceStatus" name="absenceStatus" required>
                     <option value="Sick Leave">Krank</option>
                     <option value="Appointment">Termin</option>
@@ -142,6 +144,7 @@
             <option value="me21b">ME21b</option>
             <option value="me21c">ME21c</option>
             <option value="me21d">ME21d</option>$
+        </select>
             <!--Datum-->
             <<label for="date">Datum:</label>
             <input type="date" id="date" name="date" required>
