--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
     <h1> Bildungszentrum
         Zürichsee
-<div class="absenzen">
-        Absenzen</div>
+    <div class="absenzen"> Absenzen</div>
     </h1>
 
     <!--Login-->
@@ -27,11 +26,8 @@
     <input type="password" id="password" name="password" required>
 
     <button class="login" type="button" onclick="login()">Login</button>
-            </div>
-
-
     </form>
-
+    </div>
 
     <div id="optionsSection" class="options">
         <button id="logAbsenceButton" class="action-button" type="button" onclick="logAbsence()">Abwesenheit protokollieren</button>
@@ -42,7 +38,7 @@
 <!-- Abwesenheit protokollieren, löschen, ansehen--->
     <div id="logAbsenceContent" class="action-content">
         <!-- go back button-->
-        <button id="goBackButton" class="goback" onclick="goBackToOptions()">
+        <button class="goback" onclick="goBackToOptions()">
          <svg xmlns="http://www.w3.org/2000/svg" width="39" height="42" viewBox="0 0 39 42" fill="none">
             <path d="M2 20L38.5 41V1.5L2 20Z" fill="#D9D9D9" stroke="black"/>
         </svg>
@@ -81,7 +77,7 @@
                 <!--kommentar-->
                 <label for="Kommentar">Kommentar:</label>
                 <textarea id="Kommentar" name="Kommentar" rows="4" cols="50"></textarea>
-
+        <button id="protokollieren" class="action-button" type="button" onclick="protokollierenButton()">Protokollieren</button>
     </div>
 
     <div id="deleteAbsenceContent" class="action-content">
@@ -126,6 +122,8 @@
                 <!--kommentar-->
                 <label for="Kommentar">Kommentar:</label>
                 <textarea id="Kommentar" name="Kommentar" rows="4" cols="50"></textarea>
+
+        <button id="löschen" class="action-button" type="button" onclick="loeschenButton()">Löschen</button>
     </div>
 
     <div id="viewHistoryContent" class="action-content">
@@ -146,7 +144,7 @@
             <option value="me21d">ME21d</option>$
         </select>
             <!--Datum-->
-            <<label for="date">Datum:</label>
+            <label for="date">Datum:</label>
             <input type="date" id="date" name="date" required>
     </div>
 
@@ -158,30 +156,3 @@
 
 
 
-<!--<form id="absenceForm" style="display: none;">-->
-<!--Decide your class options
-    <label for="class">Class:</label>
-    <select id="class" name="class" required>
-        <option value="me21a">ME21a</option>
-        <option value="me21b">ME21b</option>
-        <option value="me21c">ME21c</option>
-        <option value="me21d">ME21d</option>
-
-    <label for="date">Datum:</label>
-    <input type="date" id="date" name="date" required>
-
-        <label for="absenceStatus">Grund für Absenz:</label>
-        <select id="absenceStatus" name="absenceStatus" required>
-            <option value="present">Anwesend</option>
-            <option value="absent">Abwesend</option>
-            <option value="late">Verspätet</option>
-            <option value="approvedDispensation">Bewiligte Dispenz</option>
-            <option value="unapprovedDispensation">Nicht bewiligte Dispenz</option>
-            <option value="warned">Ermahnt</option>
-            <option value="teacherSick">Lehrperson ist Krank</option>
-
-        </select>
-
-
-        <label for="comment">Kommentar:</label>
-        <textarea id="comment" name="comment" rows="4"></textarea>-->
